# processmine

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Makefile  README.md
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/workflows/: release.yml  test.yml
R/: DESCRIPTION  LICENSE  NAMESPACE
R/R/: bridge.R  conformance.R  discover.R  io.R  performance.R  split.R  variants.R
R/tests/: testthat.R
R/tests/testthat/: test-bridge.R  test-conformance.R  test-discover.R  test-io-csv.R  test-io.R  test-performance.R  test-split.R  test-variants.R
R/tests/testthat/fixtures/: tiny.xes
data/sample_logs/: bpi2012_sample.xes
docs/: status.md  user_guide.md
notebooks/: 01_process_analysis.Rmd  02_ml_analysis.ipynb
python/: pyproject.toml
python/processmine_ml/: __init__.py  align.py  anomaly.py  drift.py  io.py  prediction.py  split.py
python/tests/: conftest.py  test_align.py  test_anomaly.py  test_drift.py  test_io.py  test_io_csv.py  test_prediction.py  test_split.py
scripts/: _roundtrip_py.py  roundtrip_check.R
