[project]
name = "processmine-ml"
version = "0.0.1"
description = "Python ML layer for the processmine process-mining library."
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "pandas>=2.2",
    "pyarrow>=16.0.0",
    "scikit-learn>=1.4",
    "numpy>=1.26",
    "river>=0.21",
]

[project.optional-dependencies]
ml = [
    "torch>=2.2",
]
pm4py = [
    "pm4py>=2.7",
]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff>=0.4",
    "mypy>=1.10",
    "pandas-stubs",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["processmine_ml"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
